refactor: handle type_aware normalizer strategy internally (#268)
* handle type_aware normalizer strategy internally

Signed-off-by: Philip Chan <22754958+philiplhchan@users.noreply.github.com>

* fix docstring

Signed-off-by: Philip Chan <22754958+philiplhchan@users.noreply.github.com>

---------

Signed-off-by: Philip Chan <22754958+philiplhchan@users.noreply.github.com>